# Bismuth-TShell

./: .gitignore  Bismuth  Bismuth.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-5d908ccbd7ee28d90795.json  cache-v2-d0db1ad94e205a214ff0.json  cmakeFiles-v1-9754c521c7b54d91cb72.json  cmakeFiles-v1-b795d2e5eefa8ded73f6.json  codemodel-v2-5b2fd7ddbe61de27ea22.json  codemodel-v2-d1ca7d86f2e6aff1bcf2.json  index-2025-05-01T09-57-19-0060.json  index-2025-05-17T03-15-32-0280.json  target-Bismuth-Debug-7f016be335a58b45c898.json  target-Bismuth-Debug-bfd711221254716154f1.json
example/: main.c
include/: BWinManager.h  Bismuth.h  Module.h  TermWin.h
include/logger/: logger.h
src/: BWinManager.c  Bismuth.c  Module.c  TermWin.c
src/logger/: logger.c
test/: main.c  mice  mice.c
